--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,13 @@
 }
 body{
   padding: 0px;
-    margin: 0px;
-  background: url(./assets/bgArm.jpg) repeat center center fixed;
+  margin: 0px;
+  background: url(./assets/bgArm1.jpg) repeat center center fixed;
   background-size: cover;
+  transition: all 2s ease-in-out
 }
 #vanta {
-    z-index: 0;
+    z-index: -18;
     position: absolute;
     left:0;
     top:0;
@@ -20,29 +21,45 @@ body{
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding-top: 35px;
+    height: 100%;
+    padding-top: 15px;
+    z-index:30;
   }
   .container::after{
     content: "";
-    background-color: rgb(46, 52, 64);
-    opacity: 0.7;
+    background-color: rgb(7, 25,47);
+    opacity: 0.5;
     position: absolute;
-    width: 100%;
-    height: 100vh;
     top: 0;
+    bottom: 0;
+    left:0;
     right: 0;
-    z-index: -1;
-    filter: blur(5px);
+    z-index: -20;
+    height: 150%;
   }
 .header-container{
       width: 100%;
       display: flex;
       justify-content:center;
       align-items: center;
+      flex-direction: column;
+  }
+  h3{
+    color: #ECEFF4;
+    margin-top: 10px;
+    font-size: 24px;
+    font-family: "Helvetica Neue",Arial,sans-serif;
+  }
+  h5{
+
+    color: #ECEFF4;
+    margin-top: 10px;
+    font-size: 16px;
+    font-family: "Helvetica Neue",Arial,sans-serif;
   }
   .image-wrapper{
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: flex;
     justify-content:center;
     align-items: center;
@@ -51,7 +68,7 @@ body{
     border: 4px solid #EBCB8B;
   }
 .profile-pic{
-    width:300px;
+    width:400px;
     height:100%;
     
   }
@@ -66,7 +83,7 @@ body{
 
   }
 .link-item-container{
-    width: 70%;
+    width: 320px;
     height: 60%;
     display: flex;
     flex-direction: column;
@@ -81,6 +98,10 @@ body{
     color: #2E3440;
     font-size: 24px;
     font-weight: 700;
+  }
+  .fa-ul{
+    padding: 0;
+    margin-left: 0em;
   }
 .link-item{
     width: 50%;
