--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body{
   padding: 0px;
   margin: 0px;
-  background: url(./assets/bgArm1.jpg) repeat center center fixed;
+  background: url(./assets/bgArm3.jpg) repeat center center fixed;
   background-size: cover;
   transition: all 2s ease-in-out
 }
@@ -24,6 +24,7 @@ body{
     height: 100%;
     padding-top: 15px;
     z-index:30;
+    row-gap: 25px;
   }
   .container::after{
     content: "";
@@ -65,7 +66,7 @@ body{
     align-items: center;
     overflow: hidden;
     border-radius: 300px;
-    border: 4px solid #EBCB8B;
+    border: 4px solid #13282F;
   }
 .profile-pic{
     width:400px;
@@ -78,9 +79,29 @@ body{
     height: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    position: relative;
 
+  }
+.lines-wrapper{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 50px;
+    align-items:center;
+  }
+  .line{
+    content: "";
+    width: 300px;
+    height: 3px;
+    background-color: #484B4A;
+  }
+  .line-mid{
+    width: 200px;
+  }
+.line-bot{
+    width: 100px;
   }
 .link-item-container{
     width: 320px;
@@ -106,16 +127,16 @@ body{
 .link-item{
     width: 50%;
     height: 60px;
-    background:rgba(255,255,255,0.4);
+    background:rgba(255,255,255,0.5);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0px 15px;
     border-radius: 15px;
     -webkit-transition: all 0.2s ease-in-out;
--moz-transition: all 0.2s ease-in-out;
--o-transition: all 0.2s ease-in-out;
-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
   }
   .link-item:hover{
     cursor: pointer;
