--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body{
   margin: 0px;
   background: url(./assets/bgArm3.jpg) repeat center center fixed;
   background-size: cover;
-  transition: all 2s ease-in-out
 }
 #vanta {
     z-index: -18;
@@ -117,7 +116,7 @@ body{
   a{
     text-decoration: none;
     color: #2E3440;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 700;
   }
   .fa-ul{
@@ -129,7 +128,7 @@ body{
     height: 50px;
     background:rgba(255,255,255,0.5);
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     padding: 0px 15px;
     border-radius: 15px;
@@ -137,6 +136,7 @@ body{
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
+    column-gap: 15px;
   }
   .link-item:hover{
     cursor: pointer;
@@ -146,8 +146,3 @@ body{
 i{
     color: #2E3440;
   }
-  @media (max-width: 1250px) {
-  a{
-      font-size: 16px;
-    }
-}
