--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,10 @@
 body{
   padding: 0px;
   margin: 0px;
-  background: url(./assets/bgArm3.jpg) repeat center center fixed;
+  background: url(./assets/edalpessback.png) repeat center center fixed;
   background-size: cover;
+    overflow: hidden;
 }
-#vanta {
-    z-index: -18;
-    position: absolute;
-    left:0;
-    top:0;
-    width: 100%;
-    height: 100%;
-  }
 .container{
     display: flex;
     flex-direction: column;
@@ -75,7 +68,6 @@ body{
 
 .links-wrapper{
     width: 100%;
-    height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,11 +96,11 @@ body{
   }
 .link-item-container{
     width: 250px;
-    height: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    row-gap: 16px;
   }
   li{
     list-style: none;
@@ -141,7 +133,7 @@ body{
   .link-item:hover{
     cursor: pointer;
     background:rgba(255,255,255,0.9);
-    height: 55px;
+    scale:  0.9;
   }
 i{
     color: #2E3440;
